--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   </head>
   <body>
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.3.1/firebase-app.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="/__/firebase/6.3.1/firebase-auth.js"></script>
+    <script src="/__/firebase/6.3.1/firebase-firestore.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
     <div id="app">
 
       <h1>My ToDo List</h1>
@@ -40,4 +49,3 @@
     <script src="main.js"></script>
   </body>
 </html>
-
