--- a/public/index.html
+++ b/public/index.html
@@ -14,21 +14,20 @@
     <script src="https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
 
+    <!-- TODO.1 -->
+    <!-- <!-1- The core Firebase JS SDK is always required and must be listed first -1-> -->
+    <!-- <script src="/__/firebase/6.2.0/firebase-app.js"></script> -->
+
+    <!-- <!-1- Add SDKs for Firebase products that you want to use -1-> -->
+    <!-- <script src="/__/firebase/6.3.1/firebase-auth.js"></script> -->
+    <!-- <script src="/__/firebase/6.2.0/firebase-firestore.js"></script> -->
+
+    <!-- <!-1- Initialize Firebase -1-> -->
+    <!-- <script src="/__/firebase/init.js"></script> -->
+
     <title>My Todo List</title>
   </head>
   <body>
-
-    <!-- TODO.1 -->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/6.2.0/firebase-app.js"></script>
-
-    <!-- Add SDKs for Firebase products that you want to use -->
-    <script src="/__/firebase/6.2.0/firebase-functions.js"></script>
-    <script src="/__/firebase/6.2.0/firebase-firestore.js"></script>
-
-    <!-- Initialize Firebase -->
-    <script src="/__/firebase/init.js"></script>
-
     <div id="app" class="text-center mx-auto" style="width: 640px;">
 
       <h1>My ToDo List</h1>
