--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
 
     <!-- TODO.1 -->
-    <!-- <!-1- The core Firebase JS SDK is always required and must be listed first -1-> -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <!-- <script src="/__/firebase/6.2.0/firebase-app.js"></script> -->
 
-    <!-- <!-1- Add SDKs for Firebase products that you want to use -1-> -->
+    <!-- Add SDKs for Firebase products that you want to use -->
     <!-- <script src="/__/firebase/6.3.1/firebase-auth.js"></script> -->
     <!-- <script src="/__/firebase/6.2.0/firebase-firestore.js"></script> -->
 
-    <!-- <!-1- Initialize Firebase -1-> -->
+    <!-- Initialize Firebase -->
     <!-- <script src="/__/firebase/init.js"></script> -->
 
     <title>My Todo List</title>
